--- a/demo/package.json
+++ b/demo/package.json
@@ -19,6 +19,8 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "@polymer/polymer": "^2.0.2",
+    "@webcomponents/webcomponentsjs": "^1.0.3",
     "date-fns": "^1.28.5"
   }
 }
